.fix the jss table layout issue

--- a/src/main/webapp/less/OrganizationInfo.less
+++ b/src/main/webapp/less/OrganizationInfo.less
@@ -12,6 +12,7 @@
   }
   .btn_tr .right{
   	padding-top: 10px;
+  	min-width:147px;
 	padding-bottom: 10px;
 	padding-right:30px;
   }
@@ -50,6 +51,11 @@
   .alert-td{
   	.alert{
   		margin:0;
+  		display: inline-block;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		width:400px;
+		overflow: hidden;
   	}
   }
   button.status{
